Fix long toc not showing

--- a/public/static/toc.css
+++ b/public/static/toc.css
@@ -8,12 +8,17 @@
     height: 100%;
     border-right-width: 2px;
     background-color: white;
+    overflow-y: auto;
   }
 
   .toc ol {
     list-style: none;
     padding: 0;
     margin: 0;
+  }
+
+  .toc > ol {
+    padding-bottom: 8rem;
   }
 
   .toc ol ol { padding-left: 1rem; }
